fix: color contrast of WYSIWYG components in the local footer dark variant

--- a/docroot/themes/humsci/humsci_basic/src/scss/utilities/_wysiwyg-text-area.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/utilities/_wysiwyg-text-area.scss
@@ -28,6 +28,10 @@
     color: darken($su-color-driftwood, 45%);
     font-size: hb-calculate-rems(14px);
     font-style: italic;
+
+    .hb-local-footer--dark & {
+      color: $hb-color--white; // WIP
+    }
   }
 
   &-font-lead {
@@ -35,6 +39,14 @@
     font-size: hb-calculate-rems(18px);
     font-weight: hb-theme-font-weight(regular);
     line-height: 127%;
+
+    .hb-local-footer--dark & {
+      color: $hb-color--white;
+
+      @include hb-colorful {
+        color: lighten(hb-colorful-variation(secondary), 10%); // WIP
+      }
+    }
 
     @include grid-media-min('lg') {
       font-size: hb-calculate-rems(20px);
@@ -59,6 +71,10 @@
   &-caption {
     color: darken($su-color-driftwood, 45%);
     font-size: hb-calculate-rems(14px);
+
+    .hb-local-footer--dark & {
+      color: $hb-color--white; // WIP
+    }
   }
 
   &-short-line-length {
@@ -158,5 +174,13 @@ blockquote:nth-child(n) {
 
   p {
     @include hb-blockquote;
+
+    .hb-local-footer--dark & { // WIP
+      color: $hb-color--white;
+
+      @include hb-colorful {
+        color: lighten(hb-colorful-variation(secondary), 10%);
+      }
+    }
   }
 }
